updated media ques and some layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-                    
+                
+
 .bottom-border {
     border-color: #5bc0be;
 }
@@ -73,7 +74,6 @@ header a:hover {
     display: inline-block;
     gap: 15px;
     margin: 1em;
-    padding: 15px;
     border-bottom: 1.5px solid;
 }
 
@@ -100,6 +100,7 @@ header a:hover {
 .portfolio {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
     grid-gap: 15px;
     padding: 35px;
     border-bottom: 2px solid black;
@@ -159,3 +160,17 @@ header a:hover {
     grid-template-columns: repeat(3, 1fr);
     
 }
+
+
+@media screen and (min-width: 575px) {
+    header h1 {
+        overflow: visible;
+        font-size: 25px;
+    }
+/*
+    .portfolio div {
+        width: 150px;
+        height: 100px;
+    }
+}
+*/
